jni-macros/tests/ui/bind_java_type/fail/core_type_throwable_without_jni_core.rs
// Test that java.lang.Throwable cannot be bound without __jni_core = true

jni_macros::bind_java_type! {
    rust_type = MyThrowable,
    java_type = "java.lang.Throwable",
}

fn main() {}
